--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,17 @@
 [project]
-name = "mypackage"
-version = "0.0.1"
-description = "A short description about mypackage"
-authors = [
-  {name = "Ryan Jenkinson", email = "hello@ryan.eco" }
-]
-maintainers = [
-  {name = "Ryan Jenkinson", email = "hello@ryan.eco" }
-]
+name = "data-centre-modelling"
+version = "0.1.0"
+description = "Add your description here"
 readme = "README.md"
-packages = [
-  { include = "src" },
-]
-requires-python = ">=3.10, <4.0"
+requires-python = ">=3.11"
 dependencies = [
-    "pandas>=2.1.3",
-]
-
-[project.optional-dependencies]
-plotting = [
-    "plotly>=5.18.0",
+    "ipykernel>=6.29.5",
+    "matplotlib>=3.10.3",
+    "nbformat>=5.10.4",
+    "pandas>=2.2.3",
+    "plotly>=6.1.2",
+    "pypsa>=0.34.1",
+    "seaborn>=0.13.2",
 ]
 
 [tool.uv]
@@ -37,11 +29,10 @@ dev-dependencies = [
 
 [tool.uv.pip]
 generate-hashes = true
-extra = ["plotting"]
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["uv_build>=0.7.10,<0.8.0"]
+build-backend = "uv_build"
 
 [project.urls]
 "Repository" = "https://github.com/ryanjenkinson/mypackage"
@@ -100,19 +91,3 @@ addopts = """
 --cov-report term-missing \
 --doctest-modules \
 --cov-config=pyproject.toml"""
-
-# uv cannot yet specify run commands in the pyproject.toml
-# [tool.uv.run]
-# setup = "pre-commit run --all-files"
-# main = "python -m mypackage"
-# test = "pytest"
-# lint = "ruff check . --fix"
-# format = "ruff format ."
-# docs = "mkdocs serve --use-directory-urls -f docs/mkdocs.yaml"
-# docs-html = "mkdocs build --no-directory-urls -f docs/mkdocs.yaml"
-# docs-publish = """mkdocs gh-deploy \
-# --config-file docs/mkdocs.yaml \
-# --no-directory-urls \
-# --remote-branch docs"""
-# uv scripts can't handle a complicated docker build script like below just yet
-# docker-build = { cmd = """docker build --build-arg BUILDTAG=$BUILD_TAG --build-arg BUILDPLATFORM=$BUILD_PLATFORM --target $TARGET -t mypackage:$target-$build_tag .""", env = { BUILD_TAG = "3.11-slim", BUILD_PLATFORM = "linux/amd64", TARGET = "prod"} }
