--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "atlite>=0.4.1",
     "ipykernel>=6.29.5",
     "matplotlib>=3.10.3",
     "nbformat>=5.10.4",
@@ -29,6 +30,10 @@ dev-dependencies = [
 
 [tool.uv.pip]
 generate-hashes = true
+
+[[tool.uv.index]]
+default = true
+url = "https://pypi.org/simple"
 
 [build-system]
 requires = ["uv_build>=0.7.10,<0.8.0"]
